results/SpecGenBench/4-shot/log-DigitCount-2023_11_05_00_46_41.txt
import java.util.Map;
import java.util.HashMap;

class DigitCount {
    //@ requires num != null;
    //@ ensures \result <==> (\forall int i; 0 <= i && i < num.length(); h.getOrDefault(i, 0) == num.charAt(i) - '0');
    public boolean digitCount(String num) {
        Map<Integer, Integer> h = new HashMap<Integer, Integer>();
        int n = num.length();
        //@ loop_invariant 0 <= i && i <= n;
        //@ loop_invariant (\forall int j; 0 <= j && j < i; h.getOrDefault(j, 0) == num.charAt(j) - '0');
        //@ decreases n - i;
        for (int i = 0; i < n; i++) {
            int digit = num.charAt(i) - '0';
            h.put(digit, h.getOrDefault(digit, 0) + 1);
        }
        //@ loop_invariant 0 <= i && i <= n;
        //@ loop_invariant (\forall int j; 0 <= j && j < i; h.getOrDefault(j, 0) == num.charAt(j) - '0');
        //@ decreases n - i;
        for (int i = 0; i < n; i++) {
            int v = num.charAt(i) - '0';
            if (h.getOrDefault(i, 0) != v) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitCount.java:6: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < num.length(); h.getOrDefault(i, 0) == num.charAt(i) - '0');
                                                                         ^
  symbol:   variable h
  location: class DigitCount
/home/max/Documents/JMLGPT/tmp/DigitCount.java:11: warning: A non-pure method is being called where it is not permitted: java.util.Map.getOrDefault(java.lang.Object,V)
        //@ loop_invariant (\forall int j; 0 <= j && j < i; h.getOrDefault(j, 0) == num.charAt(j) - '0');
                                                                          ^
/home/max/Documents/JMLGPT/tmp/DigitCount.java:18: warning: A non-pure method is being called where it is not permitted: java.util.Map.getOrDefault(java.lang.Object,V)
        //@ loop_invariant (\forall int j; 0 <= j && j < i; h.getOrDefault(j, 0) == num.charAt(j) - '0');
                                                                          ^
1 error
2 warnings

